--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,14 @@
 dist: trusty
+language: python
+services: docker
 
 jobs:
   include:
     - stage: build docker image
       script:
       - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-      - docker build -t webbox .
+      - docker build -t webbox --quiet .
       - docker images
-      - docker tag webbox $DOCKER_USERNAME/webbox
-      - docker push $DOCKER_USERNAME/webbox
     - stage: test
-      script: docker run --rm $DOCKER_USERNAME/webbox python3 -m unittest tests/test.py
-    - script: docker run --rm $DOCKER_USERNAME/webbox python3 -m unittest tests/test.py
+      script: docker run --rm webbox python3 -m unittest tests/test.py
+    - script: docker run --rm webbox python3 -m unittest tests/test.py
