--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,13 @@
+beautifulsoup4==4.9.1
+certifi==2020.6.20
+chardet==3.0.4
+idna==2.10
 numpy==1.19.0
 opencv-python==4.2.0.34
+requests==2.24.0
 selenium==3.141.0
 Shapely==1.7.0
+soupsieve==2.0.1
 tqdm==4.46.1
 urllib3==1.25.9
+Wikipedia-API==0.5.4
